<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Electric Imp Controller</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>


    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="edit_your_device_id">Edit your device Id</string>
    <string name="edit_your_imp_id">Edit your Imp Id</string>
    <string name="electric_imp_id">Electric Imp agent id</string>
    <string name="user_id">User id</string>
    <string name="default_user_id">123456</string>
    <string name="val_not_set">Not set</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting...</string>

    <string name="err_connection_error">Connection Error</string>
    <string name="err_no_internet">No internet connection</string>
    <string name="err_imp_disconnected">"Your Electric Imp disconnected"</string>
    <string name="err_electric_imp_agent_id">Invalid Electric Imp agent id</string>
    <string name="err_user_id">Invalid user id</string>

</resources>
