<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/action_settings" >
        <EditTextPreference
            android:key="prefElectecImpAgentId"
            android:icon="@drawable/ic_action_help"
            android:defaultValue="@string/val_not_set"
            android:title="@string/electric_imp_id" />
        <EditTextPreference
            android:key="prefUserId"
            android:icon="@drawable/ic_action_help"
            android:defaultValue="@string/default_user_id"
            android:title="@string/user_id" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/action_about" >
        <Preference
            android:key="prefAbout"
            android:title="@string/action_about" />
        <Preference
            android:key="prefHelp"
            android:title="@string/action_help" />
    </PreferenceCategory>

</PreferenceScreen>